--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-*, ::before, ::after {
+*,
+::before,
+::after {
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding: 0;
 
 }
 
 body {
-    font-family: 'Poppins', sans-serif;;
-    background: black;
+    font-family: 'Poppins', sans-serif;
+    background-color: black;
     position: relative;
     height: 100vh;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
-span{
+span {
     color: #f1f1f1;
 }
-header{
+
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,12 +35,12 @@ header{
     font-size: 35px;
 }
 
-.menu{
+.menu {
     display: flex;
     align-items: center;
 }
 
-.menu li{
+.menu li {
     list-style: none;
     margin: 0 15px;
 }
@@ -47,13 +50,14 @@ header{
     text-decoration: 0;
     text-transform: uppercase;
     font-size: 14px;
-    transition: 0.5s;
+    transition: 0.2s;
 }
 
-.menu li :hover  {
+.menu li :hover {
     color: #f1f1f1;
 
 }
+
 .dowload_now_link {
     display: flex;
     justify-content: center;
@@ -66,13 +70,14 @@ header{
     border: 1px solid salmon;
     padding: 5px 8px;
 }
+
 /*
 .menu li .dowload_li  {
     color: #f45f4f;
 }*/
 
 .menu .dowload_li:hover a {
-     color: #f76555;
+    color: #f76555;
 }
 
 .description {
@@ -82,12 +87,13 @@ header{
     align-items: center;
     justify-content: space-between;
 }
+
 /*apparait disparait*/
 .container {
     text-align: center;
-    padding:  8%;
+    padding: 8%;
     width: 100%;
-   /* width: 246px;*/
+    /* width: 246px;*/
     overflow: hidden;
 }
 
@@ -101,10 +107,11 @@ header{
 .container .text.first-text {
     color: #FFF;
 }
-.container .text.second-text{
+
+.container .text.second-text {
     width: 100%;
-   white-space:nowrap;
-   
+    white-space: nowrap;
+
 }
 
 .container .text.second-text:before {
@@ -117,12 +124,16 @@ header{
     background-color: black;
     border-left: 2px solid salmon;
     animation: animate 3s steps(12) infinite;
-    
+
 }
+
 @keyframes animate {
-    40%, 60% {
+
+    40%,
+    60% {
         left: calc(100% + 4px);
     }
+
     100% {
         left: 0%;
     }
@@ -141,27 +152,31 @@ header{
 }
 
 .left a {
-    margin-top:20px ;
+    margin-top: 20px;
     border: 1px solid salmon;
     text-decoration: 0;
     color: salmon;
     text-transform: uppercase;
     font-size: 14px;
     padding: 10px 20px;
-    transition: 0.5s;
+    transition: 0.2s;
 }
+
 .left a:hover {
     letter-spacing: 1px;
 }
+
 /**/
 .right {
     width: 30%;
     display: flex;
     align-items: center;
-    justify-content:center ;
+    justify-content: center;
     height: 100%;
 }
+
 .right img {
+    width: 100%;
     height: 400px;
 }
 
@@ -174,42 +189,304 @@ header{
     }
 }*/
 
-@media (max-width:770px){
+
+
+
+.clipped-video-container {
+    max-width: 500px;
+    margin: 30px auto 100px;
+  }
+  .clipped-section video {
+    width: 100%;
+    border: 10px solid #111;
+  }
+  
+.clipped-section {
+    background: linear-gradient(black, #fa8072);
+    /*background-color: #EFEBE2;*/
+    padding: 80px 10px 37px;
+    color: #111;
+    /*clip-path: polygon(0 12%, 100% 0%, 100% 88%, 0 100%)*/
+  }
+  .clipped-section h2 {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 35px;
+    padding: 100px 25px 25px;
+  }
+  
+@counter-style benefits-list {
+    system: cyclic;
+    symbols: "💸" "🧠" "💖" "🕺" "➕";
+    suffix: " ";
+  }
+  article {
+    background: linear-gradient(45deg, salmon, salmon);
+    padding: 100px 0px;
+
+}
+
+ 
+  
+.title-container {
+    width: 90%;
+    max-width: 1400px;
+    margin: -10px auto;
+}
+
+h1 {
+    color: white;
+    margin: 20px 0;
+    padding-bottom: 20px;
+    border-bottom: 1px dashed salmon;
+}
+
+
+.card-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(350px, 1fr));
+    grid-gap: 30px;
+    margin: 80px 0;
+}
+.card-wrapper{
+   
+    position: relative;
+    min-height: 350px;
+    perspective: 2000px;
+    perspective-origin: top;
+
+}
+
+.card-wrapper:hover .card {
+    transform: rotateY(180deg);
+}
+
+.card {
+    position: relative;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.8s cubic-bezier(0.86,0,0.07,1);
+    color: white;
+    font-weight: bold;
+
+}
+
+.card-front, .card-back {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 30px;
+    border-radius: 8px;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+
+.card-front {
+    width: 100%;
+    background: rgb(254, 176, 168);;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.card-wrapper:nth-child(even) .card-front {
+    background-color: black;
+}
+
+.card-front p{
+    font-size: 25px;
+    line-height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*margin-bottom: 10px;*/
+}
+/*
+.fa-solid {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+}*/
+/*
+.card-price {
+    font-size: 45px;
+}/*/
+
+.card-front img {
+    height: 80%;
+    width: 100%;
+
+}
+
+.card-back {
+    background: rgb(254, 176, 168);
+    transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-wrapper:nth-child(even) .card-back {
+    background-color: black;
+}
+.card-back p{
+  text-align: center;
+}
+.card-back a {
+    margin-top: 15px;
+    display: inline-block;
+    border-radius: 10px;
+    text-decoration: none;
+    padding: 15px;
+   /* text-transform: uppercase;*/
+    letter-spacing: 1.5px;
+    font-weight: normal ;
+    background-color: #fff;
+    font-size: 14px;
+    color: #333;
+    transition: background-color 0.3s ease-out,color 0.3s ease-out,
+}
+.card-wrapper:nth-child(odd) .card-back a:hover {
+    background-color: #1a2f42;
+    color: #fff;
+}
+.card-wrapper:nth-child(even) .card-back a:hover {
+    background-color: salmon;
+    color: #fff;
+}
+
+.bloc {
+    background-color: transparent;
+    position: relative;
+    top:45%;
+    left: 50%;
+   /* background-color: black;*/
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+    transform: translate(-50%,-50%);
+   
+
+}
+/*attention a me pas oublier le media query pour le rendre responsive*/
+.bloc span{
+    font-size: 8vw;
+    position: relative;
+    letter-spacing: 25px;
+}
+.ligne {
+    width: 85vw;
+    border-radius: 9999px;
+    height: 15px;
+    background: #f1f1f1;
+    margin: 0 auto;
+    position: absolute;
+    z-index: 10;
+}
+
+span:nth-child(odd) {
+    color: #000;
+    z-index: 11;
+}
+span:nth-child(even) {
+   color: rgb(254, 176, 168);;
+    z-index: 9;
+}
+.fond-container {
+    padding: 0 25px;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    height: 300px;
+    
+
+}
+
+.fa-brands, .fa-regular, .fa-solid {
+   color: white;
+  
+}
+.contact {
+    align-items: center;
+    background: linear-gradient( #fa8072,black);
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    padding-top: 135px;
+    
+}
+h2{
+    color: white;
+    padding-bottom: 50px;
+}
+.fond{
+    padding-top: 70px;
+       display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    width: 100%;
+}
+footer{
+    height: 250px;
+}
+/*
+.fa-brands fa-github,.fa-brands fa-linkedin {
+    color: white;
+}*/
+
+@media (max-width:770px) {
     header .menu {
         display: none;
     }
 
     .left {
-       
-        background-color: rgba(0,0,0,0.8);
+
+        background-color: rgba(0, 0, 0, 0.4);
         width: 100%;
         height: 100%;
         padding: 30PX;
     }
+
     .left h1 {
         font-size: 25px;
     }
+
     .left p {
         font-size: 12px;
     }
+
     .dowload_now_link {
- 
+
         width: 100%;
     }
+
     .container {
-       display: none;
-       /* margin-top: 50px;*/
+        display: none;
+        /* margin-top: 50px;*/
     }
-    .right,.container {
+    .right img {
+        margin-top: 50px;
+        width: 50%;
+    }
+    .right,
+    .container {
         margin-top: 50px;
         z-index: -1;
         position: absolute;
-        height: 100%;
+        height: auto;
         width: 100%;
         top: 0;
         left: 0;
     }
-    .menu_toggle{
+    .description {
+        padding: 0;
+    }
+    .menu_toggle {
         z-index: 10;
         height: 50px;
         width: 50px;
@@ -219,6 +496,7 @@ header{
         align-items: center;
         justify-content: center;
     }
+
     .menu_toggle::before {
         position: absolute;
         content: "";
@@ -228,12 +506,14 @@ header{
         background-color: #fff;
         border-radius: 6px;
         box-shadow: 6px 10px #fff;
-        transition: 0.5s;
+        transition: 0.2s;
     }
+
     .menu_toggle.active::before {
         box-shadow: 0 0 #fff;
         transform: rotate(135deg);
     }
+
     .menu_toggle::after {
         position: absolute;
         content: "";
@@ -242,9 +522,10 @@ header{
         height: 5px;
         background-color: #fff;
         border-radius: 6px;
-        transition: 0.5s;
-      
+        transition: 0.2s;
+
     }
+
     .menu_toggle.active::after {
         transform: rotate(-135deg);
     }
@@ -262,7 +543,21 @@ header{
         align-items: center;
 
     }
-    header .menu.responsive  li {
+
+    header .menu.responsive li {
         margin: 10px 0;
+    }
+    .card {
+        width: 90vw;
+    }
+    .card-container {
+          grid-template-columns: repeat(auto-fill,minmax(350px, 1fr));
+    }
+    
+    .card-wrapper {
+        width: 85%;
+    }
+    .ligne{
+        height: 4px;
     }
 }
