--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ header {
 }
 
 .right img {
+    object-fit: cover;
     width: 100%;
     height: 400px;
 }
@@ -470,8 +471,8 @@ footer{
         /* margin-top: 50px;*/
     }
     .right img {
-        margin-top: 50px;
-        width: 50%;
+        padding-top: 50px;
+        width: 75%;
     }
     .right,
     .container {
@@ -485,6 +486,7 @@ footer{
     }
     .description {
         padding: 0;
+        height: 100%;
     }
     .menu_toggle {
         z-index: 10;
@@ -546,12 +548,16 @@ footer{
 
     header .menu.responsive li {
         margin: 10px 0;
+        text-align: center ;
     }
     .card {
         width: 90vw;
     }
     .card-container {
           grid-template-columns: repeat(auto-fill,minmax(350px, 1fr));
+    }
+    .card-front img {
+        object-fit: contain;
     }
     
     .card-wrapper {
