--- a/style.css
+++ b/style.css
@@ -440,6 +440,8 @@ footer{
 .fa-brands fa-github,.fa-brands fa-linkedin {
     color: white;
 }*/
+
+/*
 .reveal{
     opacity: 0;
     transform: translateX(-30px);
@@ -448,7 +450,7 @@ footer{
     opacity: 1;
     transform: translateX(0px);
     transition: 0.3s;
-}
+}*/
 @media (max-width:770px) {
     header .menu {
         display: none;
