--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ header {
     margin-top: 20px;
     margin-bottom: 30px;
     text-align: justify;
+    text-align: center;
 }
 
 .left a {
@@ -370,15 +371,26 @@ h1 {
    justify-content: center;
    align-items: center;
     transform: translate(-50%,-50%);
+}
+    /*transform: translateX(-100%);
+    opacity: 0;
+    transition: transform 0.6s ease-in-out;
+    
    
 
-}
+
+.bloc.active {
+    transform: translateX(-50%);
+    opacity: 1;
+}*/
 /*attention a me pas oublier le media query pour le rendre responsive*/
 .bloc span{
     font-size: 8vw;
     position: relative;
     letter-spacing: 25px;
+
 }
+
 .ligne {
     width: 85vw;
     border-radius: 9999px;
@@ -441,16 +453,19 @@ footer{
     color: white;
 }*/
 
-/*
-.reveal{
+
+.reveal {
     opacity: 0;
-    transform: translateX(-30px);
+    transform: translateX(-30%);
+
 }
 .reveal-visible{
     opacity: 1;
-    transform: translateX(0px);
-    transition: 0.3s;
-}*/
+    transform: translateX(-50%);
+   transition: 0.3s;
+}
+
+
 @media (max-width:770px) {
     header .menu {
         display: none;
@@ -484,7 +499,7 @@ footer{
     .right img {
         padding-top: 50px;
         width:100%;
-        height: auto;
+       /* height: auto;*/
     }
     .right,
     .container {
@@ -580,8 +595,9 @@ footer{
         height: 4px;
     }
 }
+
 @media (min-width:770px) and (max-width: 800px){
     .right img{
-        width: 45%;
+        height: auto;
     }
 }
